--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@hookform/resolvers": "^4.1.2",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@schematichq/schematic-components": "^0.4.5",
     "@schematichq/schematic-react": "^1.2.3",
+    "@schematichq/schematic-typescript-node": "^1.1.9",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.19.2",
+    "googleapi": "^1.0.2",
+    "googleapis": "^144.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.476.0",
     "next": "^15.0.0",
