--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.15",
+    "@ai-sdk/react": "^1.1.18",
     "@clerk/nextjs": "^6.12.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^4.1.2",
@@ -20,31 +22,41 @@
     "@schematichq/schematic-components": "^0.4.5",
     "@schematichq/schematic-react": "^1.2.3",
     "@schematichq/schematic-typescript-node": "^1.1.9",
+    "@vercel/analytics": "^1.5.0",
     "add": "^2.0.6",
+    "ai": "^4.1.46",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.2",
+    "github-markdown-css": "^5.8.1",
     "googleapi": "^1.0.2",
     "googleapis": "^144.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.476.0",
     "next": "^15.0.0",
+    "openai": "^4.86.1",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.0.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "youtubei.js": "^13.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0-canary.76",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5"
   }
 }
